; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/vfp/extr_vfpmodule.c_vfp_kmode_exception.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/vfp/extr_vfpmodule.c_vfp_kmode_exception.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FPEXC = common dso_local global i32 0, align 4
@FPEXC_EN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"BUG: unsupported FP instruction in kernel mode\0A\00", align 1
@.str.1 = private unnamed_addr constant [65 x i8] c"BUG: FP instruction issued in kernel mode with FP unit disabled\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vfp_kmode_exception() #0 {
  %1 = load i32, i32* @FPEXC, align 4
  %2 = call i32 @fmrx(i32 %1)
  %3 = load i32, i32* @FPEXC_EN, align 4
  %4 = and i32 %2, %3
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @pr_crit(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  br label %10

8:                                                ; preds = %0
  %9 = call i32 @pr_crit(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.1, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %6
  ret void
}

declare dso_local i32 @fmrx(i32) #1

declare dso_local i32 @pr_crit(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
